@@ -512,26 +512,6 @@
                   <td bgcolor="#a0ddf0" colspan="" rowspan="" 
       valign="top" align="left">
     <font color="#000000" size="-1" face="arial,helvetica,sanserif">
-          -nowarn
-        </font>
-  </td>
-                      <td bgcolor="#a0ddf0" colspan="" rowspan="" 
-      valign="top" align="left">
-    <font color="#000000" size="-1" face="arial,helvetica,sanserif">
-          build.compiler.warnings
-        </font>
-  </td>
-                      <td bgcolor="#a0ddf0" colspan="" rowspan="" 
-      valign="top" align="left">
-    <font color="#000000" size="-1" face="arial,helvetica,sanserif">
-          true == not set
-        </font>
-  </td>
-      </tr>
-                  <tr>
-                  <td bgcolor="#a0ddf0" colspan="" rowspan="" 
-      valign="top" align="left">
-    <font color="#000000" size="-1" face="arial,helvetica,sanserif">
           +P
         </font>
   </td>
@@ -565,6 +545,27 @@
       valign="top" align="left">
     <font color="#000000" size="-1" face="arial,helvetica,sanserif">
           false == not set
+        </font>
+  </td>
+      </tr>
+                  <tr>
+                  <td bgcolor="#a0ddf0" colspan="" rowspan="" 
+      valign="top" align="left">
+    <font color="#000000" size="-1" face="arial,helvetica,sanserif">
+          <strong>only for Ant &lt; 1.4, replaced by the nowarn
+                attribute of javac after that</strong> -nowarn
+        </font>
+  </td>
+                      <td bgcolor="#a0ddf0" colspan="" rowspan="" 
+      valign="top" align="left">
+    <font color="#000000" size="-1" face="arial,helvetica,sanserif">
+          build.compiler.warnings
+        </font>
+  </td>
+                      <td bgcolor="#a0ddf0" colspan="" rowspan="" 
+      valign="top" align="left">
+    <font color="#000000" size="-1" face="arial,helvetica,sanserif">
+          true == not set
         </font>
   </td>
       </tr>
